11th time -- attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -8,7 +8,6 @@
 /* Code block styles */
 pre {
   overflow-x: auto;
-  max-width: calc(100% -32px);
 }
 
 /**
@@ -24,9 +23,9 @@ pre {
 .code-line {
   display: block;
   padding-left: 16px;
-  /* padding-right: 16px; */
+  padding-right: 16px;
   margin-left: -16px;
-  /* margin-right: -16px; */
+  margin-right: -16px;
   border-left: 4px solid rgba(0, 0, 0, 0); /* Set placeholder for highlight accent border color to transparent */
 }
 
